# phase

./: .gitignore  CMakeLists.txt  README.md
docs/: keymap.md
include/: buffer.hpp  editor.hpp  lib.hpp  utils.hpp
phase/: buffer.cpp  main.cpp  utils.cpp
phase/editor/: commands.cpp  editor.cpp  line_numbers.cpp  motions.cpp
phase/lib/: modal_input.cpp
tests/: test1.txt
